<resources>
    <string name="RentalCars">RentalCars</string>
    <string name="title_activity_add_car_to_d_b">AddCarToDBActivity</string>
    <string name="application_name">CARBOX</string>
    <string name="car_brand">BRAND</string>
    <string name="car_owner">OWNER</string>
    <string name="car_model">MODEL</string>
    <string name="car_color">COLOR</string>
    <string name="car_daily_price">DAILY PRICE</string>
    <string name="car_description">DESCRIPTION</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_tittle">Hello there, Welcome Back.</string>
    <string name="login_tittle_message">Sign In to continue</string>
    <string name="login_text">LOGIN</string>
    <string name="new_user">New User? SIGN UP</string>
    <string name="car_details_tittle">ADVERT DETAILS</string>
    <string name="add_advert">ADD ADVERT</string>
    <string name="enter_brand_message">Enter car brand</string>
    <string name="enter_model_message">Enter car model</string>
    <string name="enter_color_message">Enter car color</string>
    <string name="enter_price_message">Define a daily price</string>
    <string name="enter_detail_message">Express your car details</string>
    <string name="select_image_message">Select Image</string>
    <string name="add_car_button_text">ADD MY CAR</string>
    <string name="adverts_page_tittle">ADVERTS</string>
    <string name="search_brand_message">Search by brand</string>
    <string name="search_model_message">Search by model</string>
    <string name="search_color_message">Search by color</string>
    <string name="search_min_price_message">Min price</string>
    <string name="search_max_price_message">Max price</string>
    <string name="my_cars_tittle">MY CARS</string>
    <string name="profile_name">NAME</string>
    <string name="profile_surname">SURNAME</string>
    <string name="profile_mail">MAIL</string>
    <string name="profile_username">USERNAME</string>
    <string name="profile_card_limit">CREDIT CARD LIMIT</string>
    <string name="profile_membership_date">MEMBERSHIP DATE</string>
    <string name="profile_change_mail_message">Define a new mail</string>
    <string name="profile_change_password_message">Define a new password</string>
    <string name="profile_save_button_text">SAVE</string>
    <string name="profile_show_all_user">SHOW ALL USERS</string>
    <string name="go_to_hire_message">GO TO HIRE</string>
    <string name="hire_history_text">HIRE HISTORY</string>
    <string name="hire_screen_tittle">HIRE DETAILS</string>
    <string name="hire_screen_start_date">CHOOSE STARTING DATE</string>
    <string name="hire_screen_end_date">CHOOSE ENDING DATE</string>
    <string name="hire_screen_hire_button">HIRE</string>
    <string name="sign_up_page_tittle_message">WELCOME</string>
    <string name="sign_up_page_sub_message">Sign up to start your new Journey</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_city">City</string>
    <string name="sign_up_district">District</string>
    <string name="sign_up_street">Street</string>
    <string name="sign_up_no">No</string>
    <string name="sign_up_Card_Name">Enter the name on the credit card</string>
    <string name="sign_up_Card_No">Enter the numbers on the credit card</string>
    <string name="sign_up_Card_Cvv">Enter the CVV number on the credit card</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_up_already_member">Already have an account? LogIn</string>
    <string name="user_details_name_surname">Name-Surname</string>
    <string name="user_details_mail">EMAIL</string>
    <string name="user_details_city">CITY</string>
    <string name="rental_details_renter">RENTER</string>
    <string name="rental_details_rent_date">RENTAL DATE</string>
    <string name="rental_details_total_price">TOTAL PRICE</string>
    <string name="rental_history_tittle">CAR RENTAL HISTORY</string>
</resources>