<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo1"
        android:layout_gravity="center"
        android:layout_marginTop="-15dp"
        >
    </ImageView>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/bungee"
        android:text="@string/login_tittle"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tittle_message"
        android:layout_gravity="center"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:hint="@string/sign_up_username"
            app:startIconDrawable="@drawable/outline_login_black_18"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:hint="@string/sign_up_password"
            app:startIconDrawable="@drawable/outline_password_black_18"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:backgroundTint="@color/black2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        </Button>

        <Button
            android:id="@+id/signUpScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white3"
            android:textColor="@color/black"
            android:text="@string/new_user"
            android:layout_gravity="right"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>

</LinearLayout>