<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/whiteX">

    <!-- TODO: Update blank fragment layout
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:text="Profile Fragment" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_firstName"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_name"
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_lastName"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_surname "
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_email"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_mail"
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_username"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_username"
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_cardLimit"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_card_limit"
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prf_register_time"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/profile_membership_date"
            android:layout_marginBottom="5dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:layout_marginHorizontal="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prf_newMail"
            android:hint="@string/profile_change_mail_message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prf_newPassword"
            android:hint="@string/profile_change_password_message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_save_button_text"
            android:backgroundTint="@color/black2"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/btn_show_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_show_all_user"
            android:backgroundTint="@color/gray"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>