<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#F59C1D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:id="@+id/car_item_imgViewCarImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_item_txtViewCarBrand"
                android:text="@string/car_brand"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_item_txtViewCarModel"
                android:text="@string/car_model"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_item_txtViewCarColor"
                android:text="@string/car_color"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_item_txtViewCarPrice"
                android:text="@string/car_daily_price"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        android:layout_marginTop="15dp"/>


</LinearLayout>