<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteX">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hire_screen_tittle"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="24dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hire_screen_start_date"
        android:textStyle="bold"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"/>
    <ImageButton
        android:id="@+id/rental_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_name"
        android:background="@color/whiteX">
    </ImageButton>


    <TextView
        android:id="@+id/txtview_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hire_screen_end_date"
        android:textStyle="bold"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"/>


    <ImageButton
        android:id="@+id/rental_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_name"
        android:background="@color/whiteX">
    </ImageButton>


    <TextView
        android:id="@+id/txtview_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>


    <Button
        android:id="@+id/btn_rental_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hire_screen_hire_button"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black2"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp">
    </Button>

</LinearLayout>